Added getbyid,update,option result.Delete route.error  result return. #6
