# src/Controller/ApiResultsCommandController.php
@@ -113,4 +113,97 @@ class ApiResultsCommandController extends AbstractController implements ApiResul
         );
     }
 
+
+    /**
+     * @see ApiResultsCommandInterface
+     *
+     * @Route(
+     *     path="/{resultId}.{_format}",
+     *     defaults={ "_format": null },
+     *     requirements={
+     *          "userId": "\d+",
+     *         "_format": "json|xml"
+     *     },
+     *     methods={ Request::METHOD_PUT },
+     *     name="put"
+     * )
+     *
+     * @Security(
+     *     expression="is_granted('IS_AUTHENTICATED_FULLY')",
+     *     statusCode=401,
+     *     message="`Unauthorized`: Invalid credentials."
+     * )
+     * @throws JsonException
+     */
+    public function putAction(Request $request, int $resultId): Response
+    {
+        $format = Utils::getFormat($request);
+        // Puede editar un resultado sólo si tiene ROLE_ADMIN
+        /** @var Result $result */
+        //$user = $this->getUser();
+        if (
+            //($user->getId() !== $userId)
+            //&&
+        !$this->isGranted(self::ROLE_ADMIN)
+        ) {
+            return Utils::errorMessage( // 403
+                Response::HTTP_FORBIDDEN,
+                '`Forbidden`: you don\'t have permission to access',
+                $format
+            );
+        }
+        $body = (string) $request->getContent();
+        $postData = json_decode($body, true);
+
+        /** @var Result $result */
+        $result = $this->entityManager
+            ->getRepository(Result::class)
+            ->find($resultId);
+
+        if (!$result instanceof Result) {    // 404 - Not Found
+            return Utils::errorMessage(Response::HTTP_NOT_FOUND, null, $format);
+        }
+
+        // Optimistic Locking (strong validation)
+        $etag = md5((string) json_encode($result, JSON_THROW_ON_ERROR));
+        if (!$request->headers->has('If-Match') || $etag != $request->headers->get('If-Match')) {
+            return Utils::errorMessage(
+                Response::HTTP_PRECONDITION_FAILED,
+                'PRECONDITION FAILED: one or more conditions given evaluated to false',
+                $format
+            ); // 412
+        }
+
+        if (isset($postData[Result::RESULT_ID_ATTR])) {
+            $result_exist = $this->entityManager
+                ->getRepository(Result::class)
+                ->findOneBy([ Result::RESULT_ID_ATTR => $postData[Result::RESULT_ID_ATTR] ]);
+
+            if ($result_exist instanceof Result) {    // 400 - Bad Request
+                return Utils::errorMessage(Response::HTTP_BAD_REQUEST, null, $format);
+            }
+            $result->setResult($postData[Result::RESULT_ID_ATTR]);
+        }
+
+        //verificacion de que existe el usuario antes de agregarlo en la modificacion
+        if (isset($postData[Result::USER_ID_ATTR])) {
+            $user_exist = $this->entityManager
+                ->getRepository(User::class)
+                ->findOneBy([ User::USER_ID_ATTR => $postData[Result::USER_ID_ATTR] ]);
+
+            if ($user_exist instanceof User) {    // 400 - Bad Request
+                return Utils::errorMessage(Response::HTTP_BAD_REQUEST, null, $format);
+            }
+            $result->setUser($postData[User::USER_ATTR]);
+        }
+
+        $this->entityManager->flush();
+
+        return Utils::apiResponse(
+            209,                        // 209 - Content Returned
+            [ Result::RESULT_ATTR => $result ],
+            $format
+        );
+    }
+
 }
